--- a/css/main.css
+++ b/css/main.css
@@ -3,17 +3,17 @@ box-sizing: border-box;
 }
 
 body{
-    width:80%;
+    width:75%;
     margin:auto;
     text-align: center;
 }
 
 .search{
     margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 img{
-    height: 250px;
-    width: 250px;
-    margin: 10px;
+    height:200px;
+    width:200px;
 }
