working on search functionality
Using HideSeek plugin but everytime the search is used all the images disappear.

--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,6 @@ body{
     text-align: center;
 }
 
-.search{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-img{
-    height:200px;
-    width:200px;
+.sorting_list{
+    
 }
