--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,27 @@ box-sizing: border-box;
 }
 
 body{
-    width:75%;
+    width:850px;
     margin:auto;
-    text-align: center;
+    text-align:center;
+
 }
 
-.sorting_list{
-    
+#search{
+    margin-top:15px;
+    margin-bottom:15px;
 }
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+img{
+    height:175px;
+    width:175px;
+}
+
+
