--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ box-sizing: border-box;
 }
 
 body{
-    width:850px;
+    width:50%;
     margin:auto;
     text-align:center;
 
@@ -25,5 +25,4 @@ img{
     height:175px;
     width:175px;
 }
-
 
