--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,37 @@
 *{
-box-sizing: border-box;
-}
-
-body{
-    width:50%;
-    margin:auto;
-    text-align:center;
-
-}
-
-#search{
-    margin-top:15px;
-    margin-bottom:15px;
-}
-
-.container{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-img{
-    width:125px;
-    height:125px;
-}
-
-.box{
-    margin:25px;
-}
+    box-sizing: border-box;
+    }
+    
+    body{
+        text-align:center;
+    }
+    
+    #search{
+        margin: 15px;
+    }
+    
+    .img{
+        margin: 15px;
+    }
+    
+    .container{
+        width:75%;
+        margin:auto;
+    }
+    
+    @media (min-width:1024px){
+    
+        .container{
+            margin: auto;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+    
+        img{
+            height: 150px;
+            width: 150px;
+        }
+    }
+    
