Small updates to the captions in LightBox

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
+            width:75%;
         }
     
         img{
@@ -34,4 +35,11 @@
             width: 150px;
         }
     }
-    
+
+    @media (max-width:1440px) {
+        
+        img{
+            height:200px;
+            width:200px;
+        }
+    }
