--- a/css/main.css
+++ b/css/main.css
@@ -7,39 +7,35 @@
     }
     
     #search{
-        margin: 15px;
+        margin: 15px 0px 25px 0px;
     }
     
-    .img{
-        margin: 15px;
-    }
-    
-    .container{
-        width:75%;
+   /** .container{
         margin:auto;
-    }
-    
-    @media (min-width:1024px){
-    
-        .container{
-            margin: auto;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            width:75%;
-        }
-    
-        img{
-            height: 150px;
-            width: 150px;
-        }
+        max-width:900px;
     }
 
-    @media (max-width:1440px) {
+    .row{
+        display:flex;
+        justify-content: space-evenly;
+        margin-bottom: 15px;
+    }
+    **/
+    img{
+        height:150px;
+        width:150px;
+    }
+
+    @media (min-width:1024px) {
         
-        img{
-            height:200px;
-            width:200px;
+        .container{
+            margin:auto;
+            max-width:900px;
+        }
+    
+        .row{
+            display:flex;
+            justify-content: space-evenly;
+            margin-bottom: 15px;
         }
     }
