--- a/css/main.css
+++ b/css/main.css
@@ -24,18 +24,32 @@
     img{
         height:150px;
         width:150px;
+        margin-bottom:15px;
     }
 
-    @media (min-width:1024px) {
-        
+    .sorting-list {
+        width:0px;
+    }
+
+    @media (min-width:768px) {
         .container{
+            max-width:700px;
             margin:auto;
-            max-width:900px;
         }
-    
+
         .row{
             display:flex;
+            flex-wrap:wrap;
             justify-content: space-evenly;
             margin-bottom: 15px;
         }
+
+        .row .img {
+            flex-basis:25%;
+        }
+    }
+
+    @media (min-width:1024px) {
+        .container{
+            margin:auto;
     }
